# pro-nlp-generationfornlp-nlp-14

./: .env.example  .gitignore  Makefile  README.md  onboarding_manual.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: config.yaml  inference.yaml  preprocess.yaml  train.yaml
docs/: onboarding_manual.md  unsloth_usage.md
for_review/: RetrievalAdapter.py  chain.py
migrations/: __init__.py  mappings.py  migrate.py
notebooks/: data_EDA.ipynb  feature_engineering.ipynb  source_tagging.ipynb
scripts/: chat.sh  download.py  rerank.sh  setup.sh
src/analysis/: streamlit_app.py
src/chains/: __init__.py
src/chains/builder/: __init__.py  mcq_chain.py  mcq_request.py  retriever.py
src/chains/core/: __init__.py  conditions.py  logging.py  state.py
src/chains/mcq/: __init__.py  build_local_forward.py  build_remote_forward.py  format_rows.py
src/chains/nodes/: __init__.py  loggers.py  tap.py
src/chains/planning/: __init__.py  chain.py  coercion.py  mapper.py  transforms.py
src/chains/qa/: __init__.py  chain.py  prompt_builder.py
src/chains/qa/inference/: __init__.py  local.py  not_think_cot.py  remote.py  think_cot.py
src/chains/qa/postprocess/: __init__.py  decode.py
src/chains/reranker/: __init__.py  chain.py  merge_strategy.py  transformers.py
src/chains/retrieval/: __init__.py  chain.py  contents_quality_filter.py  context_builder.py  factory.py  tavily.py
src/chains/retrieval/adapter/: RetrievalAdapter.py  __init__.py
src/chains/retrieval/domain/: __init__.py  pdr_retriever.py
src/chains/retrieval/impl/: tavily_web_search.py  web_serach_test.py
src/chains/retrieval/nodes/: build_context.py  doc_to_response.py
src/chains/retrieval/services/: __init__.py  base.py  local.py  tavily.py  websearch.py
src/chains/runnables/: __init__.py  conditions.py  logging.py  selectors.py
src/chains/utils/: __init__.py  utils.py
src/core/: __init__.py  protocols.py  types.py
src/data/: __init__.py  data_processing.py  seperate_question_plus.py
src/data/preprocess/: __init__.py  fold_adjusters.py  fold_utils.py  fold_validators.py  preprocess.py  seperate_question_plus.py  sgkfold.py  source_tagger.py  source_tagging.py  taggers.py  tagging_utils.py
src/embedding/: __init__.py  base_embedder.py  base_store.py  file_store.py  openai_embedder.py  run_embedding.py  run_visualize.py  visualize.py
src/indexing/: chunking.py  indexing.py
src/indexing/backup/: download_index.py  upload_index.py
src/indexing/preprocess/: chunking.py
src/indexing/rag/crawrling/: history_timeline_crawrling.py  joseon_sillok_crawrling.py
src/inference/: __init__.py  inference.py  inference_utils.py
src/inference/chains/: __init__.py  mcq_chain.py
src/inference/chains/nodes/: __init__.py  mcq_head_nodes.py
src/infrastructure/: __init__.py  factory.py
src/infrastructure/embedders/: __init__.py  solar.py
src/infrastructure/vectorstore/: __init__.py  backup.py  client.py  config.py  factory.py
src/infrastructure/vectorstore/repository/: __init__.py  (+3 more)
src/infrastructure/websearch/: __init__.py  tavily.py
src/models/: __init__.py  model_loader.py
src/prompts/: __init__.py  base.py  v1.py  v10.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py  v8.py  v9.py
src/prompts/plan/: plan.py
src/rag/crawrling/: convert_rag_data.py  joseon_sillok_crawrling.py
src/rag/preprocess/: chunking.py  preprocess_data.py
src/schemas/: __init__.py  augmented_state.py  processed_question.py  question.py  question_base.py  reranker.py
src/schemas/mcq/: __init__.py  context.py  request.py  rows.py
src/schemas/retrieval/: __init__.py  plan.py  plan_input.py  request.py  response.py
src/subject/: __init__.py  data_loader.py  predictor.py  trainer.py
src/subject/classifiers/: __init__.py  base_classifier.py  knn_classifier.py  svm_classifier.py
src/sweep/: __init__.py
src/trainers/: CompletionOnlyDataCollator.py  __init__.py  train.py  train_review.py
src/utils/: __init__.py  choice_utils.py  config_loader.py  constants.py  prediction.py  prompts.py  wandb_setup.py
src/vectorstore/: __init__.py  backup.py  client.py  config.py  documents.py  factory.py
src/vectorstore/repository/: __init__.py  base.py  chunk_repository.py  parent_repository.py
src/vectorstore/search/: __init__.py  hybrid_search.py  protocols.py  types.py
(+2 files in other folders)
