[project]
name = "pro-nlp-generationfornlp-nlp-14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bitsandbytes>=0.49.0",
    "evaluate==0.4.3",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "langchain>=1.2.0",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "peft>=0.17.0",
    "path>=17.1.1",
    "python-dotenv>=1.2.1",
    "requests==2.32.5",
    "rich>=14.2.0",
    "scikit-learn==1.5.2",
    "transformers>4.54.0,<4.55.0",
    "trl>0.19.0,<=0.24.0",
    "unsloth>=2025.12.7",
    "unsloth-zoo>=2025.12.6",
    "streamlit>=1.52.2",
    "wandb>=0.23.1",
    "langchain-openai>=1.1.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [".venv", "notebooks"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
