[project]
name = "pro-nlp-generationfornlp-nlp-14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain==1.2.0",
    "numpy==1.26.4",
    "path==17.1.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "scikit-learn==1.5.2",
    "pandas==2.3.3",
    "tqdm==4.67.1",
    "streamlit==1.52.2",
    "torch==2.9.1",
    "datasets==4.3.0",
    "langchain-openai==1.1.6",
    "langchain-text-splitters>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
exclude = [".venv", "notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [".venv", "notebooks"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
train = [
    "bitsandbytes>=0.49.0",
    "evaluate==0.4.3",
    "peft==0.18.0",
    "rich==14.2.0",
    "transformers==4.54.1",
    "trl==0.20.0",
    "unsloth==2025.12.8",
    "unsloth-zoo==2025.12.6",
    "wandb>=0.23.1",
]
notebook = [
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "koreanize-matplotlib==0.1.1",
    "sentence-transformers==5.2.0",
    "kiwipiepy==0.22.2",
    "kiwipiepy-model==0.22.1",
]
crawling = [
    "selenium>=4.39.0",
]
